--- a/Resources/AppDetailsController.xib
+++ b/Resources/AppDetailsController.xib
@@ -12,7 +12,7 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="13"/>
+			<integer value="1"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -91,7 +91,7 @@
 									<object class="IBUIImageView" id="908224337">
 										<reference key="NSNextResponder" ref="485060825"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{15, 15}, {51, 52}}</string>
+										<string key="NSFrame">{{14, 15}, {52, 52}}</string>
 										<reference key="NSSuperview" ref="485060825"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -222,7 +222,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="491606839">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -231,6 +231,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 46}</string>
 						<reference key="NSSuperview" ref="491606839"/>
+						<reference key="NSWindow"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -241,8 +242,9 @@
 					<object class="IBUILabel" id="671095328">
 						<reference key="NSNextResponder" ref="491606839"/>
 						<int key="NSvFlags">294</int>
-						<string key="NSFrame">{{20, 10}, {220, 26}}</string>
+						<string key="NSFrame">{{15, 11}, {220, 26}}</string>
 						<reference key="NSSuperview" ref="491606839"/>
+						<reference key="NSWindow"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -262,15 +264,16 @@
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC44ODYyNzQ1MDk4IDAuOTAxOTYwNzg0MyAwLjkyMTU2ODYyNzUAA</bytes>
 						</object>
-						<string key="IBUIShadowOffset">{1, 1}</string>
+						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">1</int>
 						<float key="IBUIMinimumFontSize">10</float>
 					</object>
 					<object class="IBUIButton" id="182120391">
 						<reference key="NSNextResponder" ref="491606839"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{251, 9}, {52, 31}}</string>
+						<string key="NSFrame">{{260, 9}, {52, 31}}</string>
 						<reference key="NSSuperview" ref="491606839"/>
+						<reference key="NSWindow"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -280,6 +283,7 @@
 							<double key="NSSize">15</double>
 							<int key="NSfFlags">16</int>
 						</object>
+						<string key="IBUITitleShadowOffset">{0, -1}</string>
 						<string key="IBUINormalTitle">Edit</string>
 						<reference key="IBUIHighlightedTitleColor" ref="325558226"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
@@ -288,7 +292,7 @@
 						</object>
 						<object class="NSColor" key="IBUINormalTitleShadowColor">
 							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MC4zODk2NzkwNDY0IDAuNDc4MTQwNTMxOCAwLjUAA</bytes>
+							<bytes key="NSRGB">MCAwIDAgMC43NQA</bytes>
 						</object>
 						<object class="NSCustomResource" key="IBUINormalBackgroundImage">
 							<string key="NSClassName">NSImage</string>
@@ -297,6 +301,8 @@
 					</object>
 				</object>
 				<string key="NSFrameSize">{320, 46}</string>
+				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -516,6 +522,7 @@
 							<reference ref="182120391"/>
 						</object>
 						<reference key="parent" ref="0"/>
+						<string key="objectName">table header</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">17</int>
@@ -694,7 +701,7 @@
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<object class="IBPartialClassDescription">
 					<string key="className">AppDetailsController</string>
-					<string key="superclassName">UIViewController</string>
+					<string key="superclassName">PullToRefreshViewController</string>
 					<object class="NSMutableDictionary" key="actions">
 						<string key="NS.key.0">editStores</string>
 						<string key="NS.object.0">id</string>
@@ -719,7 +726,6 @@
 							<string>star3</string>
 							<string>star4</string>
 							<string>star5</string>
-							<string>tableView</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -732,7 +738,6 @@
 							<string>UIImageView</string>
 							<string>UIImageView</string>
 							<string>UIImageView</string>
-							<string>UITableView</string>
 						</object>
 					</object>
 					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
@@ -748,7 +753,6 @@
 							<string>star3</string>
 							<string>star4</string>
 							<string>star5</string>
-							<string>tableView</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -788,15 +792,30 @@
 								<string key="name">star5</string>
 								<string key="candidateClassName">UIImageView</string>
 							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">tableView</string>
-								<string key="candidateClassName">UITableView</string>
-							</object>
 						</object>
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/AppDetailsController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">PullToRefreshViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">tableView</string>
+						<string key="NS.object.0">UITableView</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">tableView</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">tableView</string>
+							<string key="candidateClassName">UITableView</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Classes/PullToRefreshViewController.h</string>
 					</object>
 				</object>
 			</object>
